string compare as a service